<?php

enum Role: string
{
    case ADMIN = 'ADMIN';
    case VENTE = 'VENTE';
    case STOCK = 'STOCK';
    case INVENTAIRE = 'INVENTAIRE';
}